fix: adjust footer links spacing

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -95,7 +95,7 @@ h2 > a:visited {
 }
 
 .link {
-  margin-right: 24px;
+  margin-right: 48px;
 }
 .link:first-child {
   margin-left: 48px;
